Añadido opcion de cambiar los nodos en bipartito.

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -340,6 +340,8 @@ colorNotContains = Not filtered node color
 
 confirmation = Confirmation
 
+courseColorNode = Course's color
+
 cutGrade = Grade to pass
 
 cutGradeColor = Grade to pass color
@@ -1253,6 +1255,8 @@ usePhoto = Use photos
 useQuartile = With quartiles
 
 user = user
+
+userColorNode = User's color
 
 warning = Warning
 
