--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -340,6 +340,8 @@ colorNotContains = Color de nodos no filtrados
 
 confirmation = Confirmaci\u00F3n
 
+courseColorNode = Color de los cursos
+
 cutGrade = Nota de corte
 
 cutGradeColor = Color nota de corte
@@ -1253,6 +1255,8 @@ usePhoto = Usar fotos
 useQuartile = Con cuartiles
 
 user = usuario
+
+userColorNode = Color de los usuarios
 
 warning = Advertencia
 
