Cambiado el grafo bipartito de matriculaciones

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1222,6 +1222,7 @@ text.stats                = Estad\u00EDsticas
 text.thanks               = Este trabajo ha sido posible gracias a las ayudas concedidas  por  la  Consejer\u00EDa  de  Educaci\u00F3n  de  la  Junta de Castilla y Le\u00F3n a la Universidad de Burgos (OL-2018-01) para el apoyo al desarrollo de la formaci\u00F3n on-line cofinanciadas por el Fondo Europeo de Desarrollo Regional (FEDER).
 text.thankstitle          = Agradecimientos:
 text.total                = Total
+text.totalCourses         = Matriculaciones totales: 
 text.wantonlinemode       = \u00BFQuieres entrar en modo con conexi\u00F3n?
 
 thirdInterval = Tercer intervalo
