--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1222,6 +1222,7 @@ text.stats                = Statistics
 text.thanks               = This work has been possible thanks to the aid granted by the Consejer\u00EDa de Educaci\u00F3n of the Junta de Castilla y Le\u00F3n to the Universidad de Burgos (OL-2018-01) to support the development of on-line training co-financed by the European Regional Development Fund (ERDF).
 text.thankstitle          = Acknowledgments:
 text.total                = Total
+text.totalCourses         = Total enrollments: 
 text.wantonlinemode       = Do you want to enter in online mode?
 
 thirdInterval = Third interval
