Modificado las matriculaciones agrupados por año

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -52,7 +52,7 @@ ENROLLMENT_BAR = Enrollment bars
 ENROLLMENT_BAR.xAxisTitle = \u200E
 ENROLLMENT_BAR.yAxisTitle = Enrolled users
 
-ENROLLMENT_SANKEY = Bipartite graph
+ENROLLMENT_SANKEY = Enrollment flow
 
 FORCE_ATLAS_2_BASED = Force Atlas 2
 
@@ -217,11 +217,10 @@ chartlabel.tableMean      = Mean
 chartlabel.thirdquartile  = Third Quartile
 chartlabel.upperlimit     = Upper Limit
 
-checkBox.saveNewPassword = Use the actual password.
-
 checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Web logs only
+checkbox.saveNewPassword   = Re-encrypt with the current password
 checkbox.updatedata        = Update data
 
 chk.offlinemode  = Offline mode
@@ -513,6 +512,8 @@ legendActive = Chart legend
 limitDays = Limit days
 
 limitLevelGradeItem = Grade Item limit level
+
+linkColor = Link's color
 
 listCharts = Charts available
 
