--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -52,7 +52,7 @@ ENROLLMENT_BAR = Matriculaciones barras
 ENROLLMENT_BAR.xAxisTitle = \u200E
 ENROLLMENT_BAR.yAxisTitle = Usuarios matriculados
 
-ENROLLMENT_SANKEY = Grafo bipartito
+ENROLLMENT_SANKEY = Flujo de matriculaci\u00F3n
 
 FORCE_ATLAS_2_BASED = Force Atlas 2
 
@@ -217,11 +217,10 @@ chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
 chartlabel.upperlimit     = L\u00EDmite Superior
 
-checkBox.saveNewPassword = Usar la contrase\u00F1a actual.
-
 checkbox.betatester        = Recibir versiones de prueba
 checkbox.checkupdatesagain = Comprobar actualizaciones en el arranque
 checkbox.onlyweb           = Solo registros de web
+checkbox.saveNewPassword   = Volver a encriptar con la contrase\u00F1a actual
 checkbox.updatedata        = Actualizar datos
 
 chk.offlinemode  = Modo sin conexi\u00F3n
@@ -513,6 +512,8 @@ legendActive = Leyenda del gr\u00E1fico
 limitDays = L\u00EDmite de d\u00EDas
 
 limitLevelGradeItem = L\u00EDmite nivel Item de calificaci\u00F3n
+
+linkColor = Color de los enlaces
 
 listCharts = Gr\u00E1ficas disponibles
 
