Modificado las barras de matriculaciones

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -359,6 +359,8 @@ edges.width                 = Edges -> Width
 
 emptyGradeColor = Color empty grade
 
+endMonth = End month
+
 enrollmentBarColor = Bars color
 
 error = Error
@@ -1127,6 +1129,8 @@ showNonConnected = Show nodes without edges
 showNumberPosts = Show number of posts
 
 standardDeviation = Standard deviation
+
+startMonth = Start month
 
 statisticsRanking = Statistics ranking
 
