--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -359,6 +359,8 @@ edges.width                 = Aristas -> Borde
 
 emptyGradeColor = Color de calificaci\u00F3n vac\u00EDa
 
+endMonth = Mes de fin
+
 enrollmentBarColor = Color barras
 
 error = Error
@@ -1127,6 +1129,8 @@ showNonConnected = Mostrar nodos sin aristas
 showNumberPosts = Mostrar n\u00FAmero de mensajes
 
 standardDeviation = Desviaci\u00F3n t\u00EDpica
+
+startMonth = Mes de inicio
 
 statisticsRanking = Ranking estad\u00EDstico
 
