Añadido subtotal y toal en las barras de matriculacion

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1248,7 +1248,11 @@ tooltip.rol              = Role
 
 tooltipDecimals = Decimal tooltip
 
+total = Total: 
+
 transitionDuration = Transition duration (ms)
+
+unknown = Unknown
 
 url.microsoftFormPolicy = https://www.microsoft.com/en-gb/servicesagreement/
 
