--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1248,7 +1248,11 @@ tooltip.rol              = Rol
 
 tooltipDecimals = Informaci\u00F3n de decimales
 
+total = Total: 
+
 transitionDuration = Duraci\u00F3n de transici\u00F3n (ms)
+
+unknown = Desconocido
 
 url.microsoftFormPolicy = https://www.microsoft.com/es-es/servicesagreement/
 
