Los informes de errores se envia los primeros y ultimos caracteres.

--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -217,6 +217,8 @@ chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
 chartlabel.upperlimit     = L\u00EDmite Superior
 
+checkBox.acceptCondition = He le\u00EDdo y acepto las Pol\u00EDtica de privacidad (obligatorio)
+
 checkbox.betatester        = Recibir versiones de prueba
 checkbox.checkupdatesagain = Comprobar actualizaciones en el arranque
 checkbox.onlyweb           = Solo registros de web
@@ -440,7 +442,7 @@ label.activities                  = # items de finalizaci\u00F3n de actividad
 label.calendarevents              = # eventos del calendario
 label.categoryitem                = Categor\u00EDa/Item:
 label.close                       = Cerrar
-label.comment                     = Comentarios y sugerencias:
+label.comment                     = Comentarios y sugerencias (obligatorio):
 label.component                   = Componente: 
 label.componentorevent            = Componente\nEvento:
 label.componenttypes              = # tipos de componentes
