--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -217,6 +217,8 @@ chartlabel.tableMean      = Mean
 chartlabel.thirdquartile  = Third Quartile
 chartlabel.upperlimit     = Upper Limit
 
+checkBox.acceptCondition = I read and accept the Privacy Policy (required)
+
 checkbox.betatester        = Receive beta versions
 checkbox.checkupdatesagain = Check for updates at startup
 checkbox.onlyweb           = Web logs only
@@ -440,7 +442,7 @@ label.activities                  = # activity completion items
 label.calendarevents              = # calendar events
 label.categoryitem                = Category/Item:
 label.close                       = Close
-label.comment                     = Comments and suggestions:
+label.comment                     = Comments and suggestions (required):
 label.component                   = Component: 
 label.componentorevent            = Component\nEvent:
 label.componenttypes              = # component types
