Quitado los decimales cuando son ceros

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -417,6 +417,8 @@ header.passwordChangedMessage   = Detected was password changed
 header.passwordDateTime         = Previous date password: 
 header.passwordIncorrectMessage = Password incorrect
 
+hidePassword = Hide password
+
 horizontalMode = Horizontal mode
 
 hovertemplateBubble = <b>%{data.name}</b><br>Logs: %{x}<br>Grade Mean: %{data.grade:.2f}<br>Activity Completion: %{y}<extra></extra>
@@ -1129,6 +1131,8 @@ secondInterval = Second interval
 showNonConnected = Show nodes without edges
 
 showNumberPosts = Show number of posts
+
+showPassword = Show password
 
 standardDeviation = Standard deviation
 
