--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -417,9 +417,11 @@ header.passwordChangedMessage   = Se ha detectado que se ha cambiado la contrase
 header.passwordDateTime         = Fecha de la contrase\u00F1a antigua: 
 header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
 
+hidePassword = Ocultar contrase\u00F1a
+
 horizontalMode = Modo horizontal
 
-hovertemplateBubble = <b>%{data.name}</b><br>Registros: %{x}<br>Nota media: %{data.grade:.2f}<br>Actividades finalizadas: %{y}<extra></extra>
+hovertemplateBubble = <b>%{data.name}</b><br>Registros: %{x}<br>Nota media: %{data.grade:.2~f}<br>Actividades finalizadas: %{y}<extra></extra>
 
 info.courseexported = Curso archivado, disponible en modo sin conexi\u00F3n.
 
@@ -1129,6 +1131,8 @@ secondInterval = Segundo intervalo
 showNonConnected = Mostrar nodos sin aristas
 
 showNumberPosts = Mostrar n\u00FAmero de mensajes
+
+showPassword = Mostrar contrase\u00F1a
 
 standardDeviation = Desviaci\u00F3n t\u00EDpica
 
