Cambios en el grafo de matriculaciones

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -52,6 +52,8 @@ ENROLLMENT_BAR = Enrollment bars
 ENROLLMENT_BAR.xAxisTitle = \u200E
 ENROLLMENT_BAR.yAxisTitle = Enrolled users
 
+ENROLLMENT_COURSE_NETWORK = Graph
+
 ENROLLMENT_SANKEY = Enrollment flow
 
 FORCE_ATLAS_2_BASED = Force Atlas 2
@@ -355,6 +357,7 @@ displayYScaleTitle = Title Y-axis
 
 edges.arrows.to.scaleFactor = Edges -> Arrows -> Scale factor
 edges.dashes                = Edges -> Dashes
+edges.moreInfoEdge          = Edges -> Detailed information
 edges.scaling.max           = Edges -> Scaling -> Max
 edges.scaling.min           = Edges -> Scaling -> Min
 edges.width                 = Edges -> Width
@@ -1077,6 +1080,7 @@ moreMax = Maximum
 nodes.borderWidth              = Nodes -> Border width
 nodes.scaling.max              = Nodes -> Scaling -> Max
 nodes.scaling.min              = Nodes -> Scaling -> Min
+nodes.showUsernames            = Nodes -> Show user names
 nodes.weightDiscussionCreation = Nodes -> Discussion creation weight
 nodes.weightReceivePost        = Nodes -> Received post weight
 nodes.weightSelfPost           = Nodes -> Auto reply post weight
