--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -52,6 +52,8 @@ ENROLLMENT_BAR = Matriculaciones barras
 ENROLLMENT_BAR.xAxisTitle = \u200E
 ENROLLMENT_BAR.yAxisTitle = Usuarios matriculados
 
+ENROLLMENT_COURSE_NETWORK = Grafo
+
 ENROLLMENT_SANKEY = Flujo de matriculaci\u00F3n
 
 FORCE_ATLAS_2_BASED = Force Atlas 2
@@ -355,6 +357,7 @@ displayYScaleTitle = T\u00EDtulo del eje Y
 
 edges.arrows.to.scaleFactor = Aristas -> Flechas -> Factor de escala
 edges.dashes                = Aristas -> Guiones
+edges.moreInfoEdge          = Aristas -> Informaci\u00F3n detallada
 edges.scaling.max           = Aristas -> Escalado -> M\u00E1x.
 edges.scaling.min           = Aristas -> Escalado -> M\u00EDn.
 edges.width                 = Aristas -> Borde
@@ -1077,6 +1080,7 @@ moreMax = M\u00E1ximo
 nodes.borderWidth              = Nodos -> Ancho borde
 nodes.scaling.max              = Nodos -> Escalado -> M\u00E1x.
 nodes.scaling.min              = Nodos -> Escalado -> M\u00EDn.
+nodes.showUsernames            = Nodos -> Mostrar nombres usuario
 nodes.weightDiscussionCreation = Nodos -> Peso creaci\u00F3n discusi\u00F3n
 nodes.weightReceivePost        = Nodos -> Peso post recibido
 nodes.weightSelfPost           = Nodos -> Peso post autorespondido
