Cambios en los grafos de matriculaciones

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -358,6 +358,7 @@ displayYScaleTitle = Title Y-axis
 edges.arrows.to.scaleFactor = Edges -> Arrows -> Scale factor
 edges.dashes                = Edges -> Dashes
 edges.moreInfoEdge          = Edges -> Detailed information
+edges.physics               = Edges -> Physics
 edges.scaling.max           = Edges -> Scaling -> Max
 edges.scaling.min           = Edges -> Scaling -> Min
 edges.width                 = Edges -> Width
@@ -1131,6 +1132,8 @@ purgePreviousDate = Select date:
 root = course
 
 secondInterval = Second interval
+
+showActualCourse = Show actual course
 
 showNonConnected = Show nodes without edges
 
