--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -219,7 +219,7 @@ chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
 chartlabel.upperlimit     = L\u00EDmite Superior
 
-checkBox.acceptCondition = He le\u00EDdo y acepto las Pol\u00EDtica de privacidad (obligatorio)
+checkBox.acceptCondition = He le\u00EDdo y acepto la Pol\u00EDtica de privacidad (obligatorio)
 
 checkbox.betatester        = Recibir versiones de prueba
 checkbox.checkupdatesagain = Comprobar actualizaciones en el arranque
@@ -358,6 +358,7 @@ displayYScaleTitle = T\u00EDtulo del eje Y
 edges.arrows.to.scaleFactor = Aristas -> Flechas -> Factor de escala
 edges.dashes                = Aristas -> Guiones
 edges.moreInfoEdge          = Aristas -> Informaci\u00F3n detallada
+edges.physics               = Aristas -> F\u00EDsicas
 edges.scaling.max           = Aristas -> Escalado -> M\u00E1x.
 edges.scaling.min           = Aristas -> Escalado -> M\u00EDn.
 edges.width                 = Aristas -> Borde
@@ -1131,6 +1132,8 @@ purgePreviousDate = Seleccione fecha:
 root = curso
 
 secondInterval = Segundo intervalo
+
+showActualCourse = Mostrar curso actual
 
 showNonConnected = Mostrar nodos sin aristas
 
