Modificado configuración de categorias paralelas

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -417,6 +417,8 @@ generalActive = General statistics
 
 groupActive = Group statistics
 
+groups = Groups
+
 header.passwordChangedMessage   = Detected was password changed
 header.passwordDateTime         = Previous date password: 
 header.passwordIncorrectMessage = Password incorrect
@@ -1075,6 +1077,8 @@ module.turnitintooltwo = Turnintin 2
 module.url             = URL
 module.wiki            = Wiki
 module.workshop        = Workshop
+
+moreInfoProbability = Detailed probability
 
 moreMax = Maximum
 
