--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -417,6 +417,8 @@ generalActive = Estad\u00EDsticas Generales
 
 groupActive = Estad\u00EDsticas de grupos
 
+groups = Grupos
+
 header.passwordChangedMessage   = Se ha detectado que se ha cambiado la contrase\u00F1a
 header.passwordDateTime         = Fecha de la contrase\u00F1a antigua: 
 header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
@@ -1075,6 +1077,8 @@ module.turnitintooltwo = Turnintin 2
 module.url             = URL
 module.wiki            = Wiki
 module.workshop        = Taller
+
+moreInfoProbability = Probabilidad detallada
 
 moreMax = M\u00E1ximo
 
