#125 Arreglado los errores al descargar los registros

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -100,6 +100,8 @@ MEAN_DIFF = Relative Cum.
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Logs
 
+PARALLEL_CATEGORY = Cohort flow
+
 POINTS_TABLE = Ratings
 
 RADAR = Radar
@@ -382,6 +384,7 @@ error.generatedataset     = Error building the dataset.
 error.host                = Can't connect with host.
 error.invalidcache        = Incompatible cache of old version of the application, clean the cache and download again. 
 error.login               = Wrong Username or password.
+error.logsEnglish         = The course logs must be in English. It may be because the course is with the force language option, check it in:\r\nEdit settings -> Appearance -> Force language -> Do not force (or alternatively English).
 error.malformedurl        = Badly formed URL. Did you add http(s) protocol?
 error.nocacheavaible      = No cache is found for this user and host
 error.nocourse            = You have to select a course.
@@ -675,7 +678,10 @@ log.event.config_log_created                                    = Config log cre
 log.event.content_content_created                               = Content created
 log.event.content_content_updated                               = Content updated
 log.event.content_content_viewed                                = Content viewed
+log.event.content_created                                       = Content created
 log.event.content_page_viewed                                   = Content page viewed
+log.event.content_updated                                       = Content updated
+log.event.content_viewed                                        = Content viewed
 log.event.course_activity_completion_updated                    = Course activity completion updated
 log.event.course_backup_created                                 = Course backup created
 log.event.course_completed                                      = Course completed
