--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -100,6 +100,8 @@ MEAN_DIFF = Acum. Relativos
 MEAN_DIFF.xAxisTitle = {0}
 MEAN_DIFF.yAxisTitle = Registros
 
+PARALLEL_CATEGORY = Flujo por cohorte
+
 POINTS_TABLE = Puntuaciones
 
 RADAR = Radar
@@ -382,6 +384,7 @@ error.generatedataset     = Error en la construcci\u00F3n del dataset.
 error.host                = No se ha podido conectar con el host.
 error.invalidcache        = Cach\u00E9 incompatible de versi\u00F3n antigua de la aplicaci\u00F3n, limpia la cach\u00E9 y vuelva descargar.
 error.login               = Usuario y/o contrase\u00F1a incorrectos.
+error.logsEnglish         = Los registros del curso deben estar en ingl\u00E9s. Puede ser porque el curso est\u00E9 con la opci\u00F3n de forzar idioma, compr\u00FAebelo en:\r\nEditar ajustes -> Apariencia -> Forzar idioma -> No forzar (o alternativamente English).
 error.malformedurl        = URL mal formada. \u00BFHas a\u00F1adido protocolo http(s)?
 error.nocacheavaible      = No se encuentra cach\u00E9 para este usuario y host
 error.nocourse            = Debe seleccionar un curso.
@@ -675,7 +678,10 @@ log.event.config_log_created                                    = Registro de co
 log.event.content_content_created                               = Contenido creado
 log.event.content_content_updated                               = Contenido actualizado
 log.event.content_content_viewed                                = Contenido visto
+log.event.content_created                                       = Contenido creado
 log.event.content_page_viewed                                   = P\u00E1gina de contenidos visualizada
+log.event.content_updated                                       = Contenido actualizado
+log.event.content_viewed                                        = Contenido visto
 log.event.course_activity_completion_updated                    = Finalizaci\u00F3n de actividad de curso actualizada
 log.event.course_backup_created                                 = Copia de curso creada
 log.event.course_completed                                      = Curso finalizado
