Mejoras en la visualizacion

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -382,6 +382,7 @@ error.fields              = You have to complete all the fields.
 error.generateCharts      = Can't generate charts.
 error.generatedataset     = Error building the dataset.
 error.host                = Can't connect with host.
+error.importlogs          = Cannot import the logs: 
 error.invalidcache        = Incompatible cache of old version of the application, clean the cache and download again. 
 error.login               = Wrong Username or password.
 error.logsEnglish         = The course logs must be in English. It may be because the course is with the force language option, check it in:\r\nEdit settings -> Appearance -> Force language -> Do not force (or alternatively English).
