--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -382,6 +382,7 @@ error.fields              = Debes completar todos los campos.
 error.generateCharts      = No se han podido generar los gr\u00E1ficos.
 error.generatedataset     = Error en la construcci\u00F3n del dataset.
 error.host                = No se ha podido conectar con el host.
+error.importlogs          = No se ha podido importar los registros: 
 error.invalidcache        = Cach\u00E9 incompatible de versi\u00F3n antigua de la aplicaci\u00F3n, limpia la cach\u00E9 y vuelva descargar.
 error.login               = Usuario y/o contrase\u00F1a incorrectos.
 error.logsEnglish         = Los registros del curso deben estar en ingl\u00E9s. Puede ser porque el curso est\u00E9 con la opci\u00F3n de forzar idioma, compr\u00FAebelo en:\r\nEditar ajustes -> Apariencia -> Forzar idioma -> No forzar (o alternativamente English).
