Añadido opción de considirerar no calificados como 0

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1085,9 +1085,13 @@ module.url             = URL
 module.wiki            = Wiki
 module.workshop        = Workshop
 
-moreInfoProbability = Detailed probability
+moreInfoProbability = More information on probabilities
 
 moreMax = Maximum
+
+noGradeAsZero = Zero to unqualified users
+
+noGroup = No groups
 
 nodes.borderWidth              = Nodes -> Border width
 nodes.scaling.max              = Nodes -> Scaling -> Max
@@ -1195,6 +1199,7 @@ text.comments             = Comments and suggestions
 text.component            = Component
 text.confirmation         = Confirmation
 text.confirmationtext     = Are you sure to remove the cache of the selected course?
+text.copyimage            = Copy image
 text.coursecachenotexists = Course cache not exists
 text.courseconfiguration  = Course configuration
 text.coursedata           = Course data
