--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1085,9 +1085,13 @@ module.url             = URL
 module.wiki            = Wiki
 module.workshop        = Taller
 
-moreInfoProbability = Probabilidad detallada
+moreInfoProbability = M\u00E1s informaci\u00F3n en probabilidades
 
 moreMax = M\u00E1ximo
+
+noGradeAsZero = Cero a usuarios sin calificar
+
+noGroup = Sin grupos
 
 nodes.borderWidth              = Nodos -> Ancho borde
 nodes.scaling.max              = Nodos -> Escalado -> M\u00E1x.
@@ -1195,6 +1199,7 @@ text.comments             = Comentarios y sugerencias
 text.component            = Componente
 text.confirmation         = Confirmaci\u00F3n
 text.confirmationtext     = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
+text.copyimage            = Copiar imagen
 text.coursecachenotexists = Cach\u00E9 del curso no existe
 text.courseconfiguration  = Configuraci\u00F3n del curso
 text.coursedata           = Datos del curso
