Añadido opción de usar no calificados

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1089,6 +1089,8 @@ moreInfoProbability = More information on probabilities
 
 moreMax = Maximum
 
+noGrade = Zero to unqualified users
+
 noGradeAsZero = Zero to unqualified users
 
 noGroup = No groups
@@ -1227,6 +1229,8 @@ text.lastaccess           = Last access:
 text.lastcourseupdate     = Time elapsed since the last update: {0, choice, 0#Zero days|1#one day|1<{0} days}{1,choice,0#|1# and one hour|1< and {1} hours}\r\nLast course updated: {2}
 text.license              = License: MIT
 text.logs                 = Logs
+text.meanfilteredusers    = Average filtered users
+text.meanselectedusers    = Average selected users
 text.minutes              = Minutes
 text.modelversionchanged  = Incompatible version of data cache with this new version.\r\n\r\n\r\nIt is necessary to download the data cache again.
 text.moodle               = Moodle: 
