--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1089,6 +1089,8 @@ moreInfoProbability = M\u00E1s informaci\u00F3n en probabilidades
 
 moreMax = M\u00E1ximo
 
+noGrade = Cero a usuarios sin calificar
+
 noGradeAsZero = Cero a usuarios sin calificar
 
 noGroup = Sin grupos
@@ -1227,6 +1229,8 @@ text.lastaccess           = \u00DAltimo acceso:
 text.lastcourseupdate     = Tiempo transcurrido desde la ultima actualizaci\u00F3n: {0, choice, 0#Cero d\u00EDas|1#un d\u00EDa|1<{0} d\u00EDas}{1,choice,0#|1# y una hora|1< y {1} horas}\r\n\u00DAltima actualizaci\u00F3n del curso: {2}
 text.license              = Licencia: MIT
 text.logs                 = Registros
+text.meanfilteredusers    = Media usuarios filtrados
+text.meanselectedusers    = Media usuarios seleccionados
 text.minutes              = minutos
 text.modelversionchanged  = Versi\u00F3n incompatible de cach\u00E9 de datos con esta nueva versi\u00F3n\r\n\r\nEs necesario descargar nuevamente los datos de las asignaturas.
 text.moodle               = Moodle: 
