Añadido sigma y gráfica quesitos

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1029,6 +1029,7 @@ menu.githubpage          = _GitHub repository
 menu.help                = _Help
 menu.importconfig        = _Import configuration...
 menu.importlogs          = I_mport logs...
+menu.importsigma         = Import Sigma
 menu.logout              = _Logout
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
@@ -1158,6 +1159,9 @@ showNumberPosts = Show number of posts
 
 showPassword = Show password
 
+sigma.gender      = Gender
+sigma.routeAccess = Route access
+
 standardDeviation = Standard deviation
 
 startMonth = Start month
@@ -1181,6 +1185,7 @@ tab.multi                = Comparisons
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Sections
+tab.sigma                = Sigma
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
