--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1029,6 +1029,7 @@ menu.githubpage          = Repositorio en _GitHub
 menu.help                = A_yuda
 menu.importconfig        = _Importar configuraci\u00F3n...
 menu.importlogs          = I_mportar registros...
+menu.importsigma         = Importar Sigma
 menu.logout              = _Cerrar sesi\u00F3n
 menu.moreinfo            = _M\u00E1s informaci\u00F3n
 menu.photos              = Exportar fotos de los usuarios seleccionados...
@@ -1158,6 +1159,9 @@ showNumberPosts = Mostrar n\u00FAmero de mensajes
 
 showPassword = Mostrar contrase\u00F1a
 
+sigma.gender      = Sexo
+sigma.routeAccess = V\u00EDa de acceso
+
 standardDeviation = Desviaci\u00F3n t\u00EDpica
 
 startMonth = Mes de inicio
@@ -1181,6 +1185,7 @@ tab.multi                = Comparaciones
 tab.noenrolleduser       = No matriculados
 tab.risk                 = Riesgo de abandono
 tab.section              = Secci\u00F3n
+tab.sigma                = Sigma
 tab.visualization        = An\u00E1lisis visual
 
 tabs.ACTIVITY_COMPLETION = An\u00E1lisis visual - Actividades finalizadas
