Añadido diagrama de barras en SIGMA

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1029,7 +1029,7 @@ menu.githubpage          = _GitHub repository
 menu.help                = _Help
 menu.importconfig        = _Import configuration...
 menu.importlogs          = I_mport logs...
-menu.importsigma         = Import Sigma
+menu.importsigma         = Import SIGMA
 menu.logout              = _Logout
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
@@ -1159,8 +1159,13 @@ showNumberPosts = Show number of posts
 
 showPassword = Show password
 
-sigma.gender      = Gender
-sigma.routeAccess = Route access
+sigma.gender               = Gender
+sigma.genderAndRouteAccess = Gender and route access
+sigma.numberOfEnrols       = Number of enrols
+sigma.routeAccess          = Route access
+sigma.yearsAccess          = Year access
+sigma.yearsConsumed        = Calls consumed
+sigma.yearsOld             = Years old
 
 standardDeviation = Standard deviation
 
@@ -1185,7 +1190,7 @@ tab.multi                = Comparisons
 tab.noenrolleduser       = Not enrolled
 tab.risk                 = Risk of dropping out
 tab.section              = Sections
-tab.sigma                = Sigma
+tab.sigma                = SIGMA
 tab.visualization        = Visual analytic
 
 tabs.ACTIVITY_COMPLETION = Visual analytic - Activity Completion
