--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1029,7 +1029,7 @@ menu.githubpage          = Repositorio en _GitHub
 menu.help                = A_yuda
 menu.importconfig        = _Importar configuraci\u00F3n...
 menu.importlogs          = I_mportar registros...
-menu.importsigma         = Importar Sigma
+menu.importsigma         = Importar SIGMA
 menu.logout              = _Cerrar sesi\u00F3n
 menu.moreinfo            = _M\u00E1s informaci\u00F3n
 menu.photos              = Exportar fotos de los usuarios seleccionados...
@@ -1159,8 +1159,13 @@ showNumberPosts = Mostrar n\u00FAmero de mensajes
 
 showPassword = Mostrar contrase\u00F1a
 
-sigma.gender      = Sexo
-sigma.routeAccess = V\u00EDa de acceso
+sigma.gender               = Sexo
+sigma.genderAndRouteAccess = Sexo y v\u00EDa de acceso
+sigma.numberOfEnrols       = N\u00FAmero de matriculaciones
+sigma.routeAccess          = V\u00EDa de acceso
+sigma.yearsAccess          = A\u00F1o de acceso
+sigma.yearsConsumed        = Convocatorias consumidas
+sigma.yearsOld             = A\u00F1os de edad
 
 standardDeviation = Desviaci\u00F3n t\u00EDpica
 
@@ -1185,7 +1190,7 @@ tab.multi                = Comparaciones
 tab.noenrolleduser       = No matriculados
 tab.risk                 = Riesgo de abandono
 tab.section              = Secci\u00F3n
-tab.sigma                = Sigma
+tab.sigma                = SIGMA
 tab.visualization        = An\u00E1lisis visual
 
 tabs.ACTIVITY_COMPLETION = An\u00E1lisis visual - Actividades finalizadas
