Añadido nombres en las barras de sigma

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1161,7 +1161,7 @@ showPassword = Show password
 
 sigma.gender               = Gender
 sigma.genderAndRouteAccess = Gender and route access
-sigma.numberOfEnrols       = Number of enrols
+sigma.numberOfEnrols       = Enrollments
 sigma.routeAccess          = Route access
 sigma.yearsAccess          = Year access
 sigma.yearsConsumed        = Calls consumed
