Añadido barras apiladas de creditos en sigma y añadido porcentajes en barras

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1159,9 +1159,12 @@ showNumberPosts = Show number of posts
 
 showPassword = Show password
 
+sigma.basicAndObligatory   = Basic and obligatroy credits enrolled
+sigma.creditsPassed        = Credits passed
 sigma.gender               = Gender
 sigma.genderAndRouteAccess = Gender and route access
 sigma.numberOfEnrols       = Enrollments
+sigma.optionalCredits      = Optional credits enrolled
 sigma.routeAccess          = Route access
 sigma.yearsAccess          = Year access
 sigma.yearsConsumed        = Calls consumed
