--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1159,9 +1159,12 @@ showNumberPosts = Mostrar n\u00FAmero de mensajes
 
 showPassword = Mostrar contrase\u00F1a
 
+sigma.basicAndObligatory   = Cr\u00E9ditos b\u00E1sicos y obligatorios matriculados
+sigma.creditsPassed        = Cr\u00E9ditos superados
 sigma.gender               = Sexo
 sigma.genderAndRouteAccess = Sexo y v\u00EDa de acceso
 sigma.numberOfEnrols       = N\u00FAmero de matriculaciones
+sigma.optionalCredits      = Cr\u00E9ditos opcionales matriculados
 sigma.routeAccess          = V\u00EDa de acceso
 sigma.yearsAccess          = A\u00F1o de acceso
 sigma.yearsConsumed        = Convocatorias consumidas
