Añadido las tablas de sigma

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1029,7 +1029,7 @@ menu.githubpage          = _GitHub repository
 menu.help                = _Help
 menu.importconfig        = _Import configuration...
 menu.importlogs          = I_mport logs...
-menu.importsigma         = Import SIGMA
+menu.importsigma         = Import SIGMA...
 menu.logout              = _Logout
 menu.moreinfo            = _More information
 menu.photos              = Export selected user photos...
@@ -1159,16 +1159,43 @@ showNumberPosts = Show number of posts
 
 showPassword = Show password
 
-sigma.basicAndObligatory   = Basic and obligatroy credits enrolled
-sigma.creditsPassed        = Credits passed
-sigma.gender               = Gender
-sigma.genderAndRouteAccess = Gender and route access
-sigma.numberOfEnrols       = Enrollments
-sigma.optionalCredits      = Optional credits enrolled
-sigma.routeAccess          = Route access
-sigma.yearsAccess          = Year access
-sigma.yearsConsumed        = Calls consumed
-sigma.yearsOld             = Years old
+sigma.DNI                               = DNI
+sigma.basicAndObligatory                = Basic and obligatroy credits enrolled
+sigma.basicAndObligatoryCreditsEnrolled = Number of basic and obligatory credits enrolled
+sigma.center                            = Center
+sigma.courseAddress                     = Course address
+sigma.coursePhone                       = Course phone
+sigma.courseYear                        = Course year
+sigma.creditsPassed                     = Credits passed
+sigma.dateOfBirth                       = Date of Birth
+sigma.email                             = Email
+sigma.enrolledSubjects                  = Enrolled subjects
+sigma.fullname                          = Fullname
+sigma.gender                            = Gender
+sigma.genderAndRouteAccess              = Gender and route access
+sigma.group                             = Group
+sigma.internationalProgram              = International program
+sigma.numberCreditsPassed               = Number credits passed
+sigma.numberOfEnrols                    = Enrollments
+sigma.observations                      = Observations
+sigma.optionalCredits                   = Optional credits enrolled
+sigma.optionalSubjects                  = Optional sibject passed
+sigma.period                            = Period
+sigma.routeAccess                       = Route access
+sigma.speciality                        = Speciality
+sigma.studyPlan                         = Study plan
+sigma.studyPlanCredits                  = Study plan credits
+sigma.subject                           = Subject
+sigma.subjectCredits                    = Subject credits
+sigma.typeAccessGrade                   = Type of access to degree
+sigma.typeOfSubject                     = Type of subject
+sigma.typeOfTeaching                    = Type of teaching
+sigma.usualAddress                      = Usual address
+sigma.usualPhone                        = Usual phone
+sigma.yearAccess                        = Year access
+sigma.yearsAccess                       = Year access
+sigma.yearsConsumed                     = Calls consumed
+sigma.yearsOld                          = Years old
 
 standardDeviation = Standard deviation
 
