--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1029,7 +1029,7 @@ menu.githubpage          = Repositorio en _GitHub
 menu.help                = A_yuda
 menu.importconfig        = _Importar configuraci\u00F3n...
 menu.importlogs          = I_mportar registros...
-menu.importsigma         = Importar SIGMA
+menu.importsigma         = Importar SIGMA...
 menu.logout              = _Cerrar sesi\u00F3n
 menu.moreinfo            = _M\u00E1s informaci\u00F3n
 menu.photos              = Exportar fotos de los usuarios seleccionados...
@@ -1159,16 +1159,43 @@ showNumberPosts = Mostrar n\u00FAmero de mensajes
 
 showPassword = Mostrar contrase\u00F1a
 
-sigma.basicAndObligatory   = Cr\u00E9ditos b\u00E1sicos y obligatorios matriculados
-sigma.creditsPassed        = Cr\u00E9ditos superados
-sigma.gender               = Sexo
-sigma.genderAndRouteAccess = Sexo y v\u00EDa de acceso
-sigma.numberOfEnrols       = N\u00FAmero de matriculaciones
-sigma.optionalCredits      = Cr\u00E9ditos opcionales matriculados
-sigma.routeAccess          = V\u00EDa de acceso
-sigma.yearsAccess          = A\u00F1o de acceso
-sigma.yearsConsumed        = Convocatorias consumidas
-sigma.yearsOld             = A\u00F1os de edad
+sigma.DNI                               = DNI
+sigma.basicAndObligatory                = Cr\u00E9ditos b\u00E1sicos y obligatorios matriculados
+sigma.basicAndObligatoryCreditsEnrolled = N\u00FAmero de cr\u00E9ditos de formaci\u00F3n b\u00E1sica y obligatorios matriculados en este curso
+sigma.center                            = Centro
+sigma.courseAddress                     = Direcci\u00F3n durante el curso
+sigma.coursePhone                       = Tel\u00E9fono curso
+sigma.courseYear                        = A\u00F1o acad\u00E9mico
+sigma.creditsPassed                     = Cr\u00E9ditos superados
+sigma.dateOfBirth                       = Fecha de nacimiento
+sigma.email                             = Email
+sigma.enrolledSubjects                  = Asignaturas matriculadas en este curso
+sigma.fullname                          = Nombre y apellidos
+sigma.gender                            = Sexo
+sigma.genderAndRouteAccess              = Sexo y v\u00EDa de acceso
+sigma.group                             = Grupo
+sigma.internationalProgram              = Programa internacional
+sigma.numberCreditsPassed               = N\u00FAmero de cr\u00E9ditos superados hasta el curso anterior
+sigma.numberOfEnrols                    = N\u00FAmero de matriculaciones
+sigma.observations                      = Observaciones del alumno/a
+sigma.optionalCredits                   = Cr\u00E9ditos opcionales matriculados
+sigma.optionalSubjects                  = Asignaturas optativas superadas
+sigma.period                            = Periodo
+sigma.routeAccess                       = V\u00EDa de acceso
+sigma.speciality                        = Especialidad
+sigma.studyPlan                         = Plan de estudio
+sigma.studyPlanCredits                  = N\u00FAmero de cr\u00E9ditos del plan de estudios
+sigma.subject                           = Asignatura
+sigma.subjectCredits                    = Cr\u00E9ditos asignatura
+sigma.typeAccessGrade                   = Tipo de acceso a titulaci\u00F3n
+sigma.typeOfSubject                     = Tipo de asignatura
+sigma.typeOfTeaching                    = Tipo docencia
+sigma.usualAddress                      = Direcci\u00F3n habitual
+sigma.usualPhone                        = Tel\u00E9fono habitual
+sigma.yearAccess                        = A\u00F1o de acceso
+sigma.yearsAccess                       = A\u00F1o de acceso
+sigma.yearsConsumed                     = Convocatorias consumidas
+sigma.yearsOld                          = A\u00F1os de edad
 
 standardDeviation = Desviaci\u00F3n t\u00EDpica
 
