Añadido las gráficas categorias paralelas de SIGMA

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -1164,6 +1164,7 @@ sigma.basicAndObligatory                = Basic and obligatroy credits enrolled
 sigma.basicAndObligatoryCreditsEnrolled = Number of basic and obligatory credits enrolled
 sigma.center                            = Center
 sigma.courseAddress                     = Course address
+sigma.courseNumberCreditsEnrolled       = Number of credits enrolled in this academic year
 sigma.coursePhone                       = Course phone
 sigma.courseYear                        = Course year
 sigma.creditsPassed                     = Credits passed
