--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -1164,13 +1164,14 @@ sigma.basicAndObligatory                = Cr\u00E9ditos b\u00E1sicos y obligator
 sigma.basicAndObligatoryCreditsEnrolled = N\u00FAmero de cr\u00E9ditos de formaci\u00F3n b\u00E1sica y obligatorios matriculados en este curso
 sigma.center                            = Centro
 sigma.courseAddress                     = Direcci\u00F3n durante el curso
+sigma.courseNumberCreditsEnrolled       = N\u00FAmero cr\u00E9ditos matriculados en este curso
 sigma.coursePhone                       = Tel\u00E9fono curso
 sigma.courseYear                        = A\u00F1o acad\u00E9mico
 sigma.creditsPassed                     = Cr\u00E9ditos superados
 sigma.dateOfBirth                       = Fecha de nacimiento
 sigma.email                             = Email
 sigma.enrolledSubjects                  = Asignaturas matriculadas en este curso
-sigma.fullname                          = Nombre y apellidos
+sigma.fullname                          = Apellidos, Nombre
 sigma.gender                            = Sexo
 sigma.genderAndRouteAccess              = Sexo y v\u00EDa de acceso
 sigma.group                             = Grupo
